--- a/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/DevelopersPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/DevelopersPage.xaml
@@ -22,7 +22,7 @@
             TextWrapping="Wrap">
             <TextBlock 
                 TextWrapping="Wrap"
-                Text="Здравствуйте, мы «GoodProgrammer» являемся разработчиками данной автоматизированной информационной системы. Мы специально стараемся разработать дружественный и удобный для пользователя интерфейс данной автоматизированной информационной системы. Так же мы стараемся вовремя исправлять баги и ошибки в работе данной автоматизированной информационной системы. Если у вас возникли вопросы, предложения по улучшению данной автоматизированной информационной системы или вы нашли баг, то можете написать нам! Наши контакты доступны в: ">
+                Text="Здравствуйте, мы «PegasusCode» являемся разработчиками данной автоматизированной информационной системы. Мы специально стараемся разработать дружественный и удобный для пользователя интерфейс данной автоматизированной информационной системы. Так же мы стараемся вовремя исправлять баги и ошибки в работе данной автоматизированной информационной системы. Если у вас возникли вопросы, предложения по улучшению данной автоматизированной информационной системы или вы нашли баг, то можете написать нам! Наши контакты доступны в: ">
                 <Hyperlink 
                     Style="{DynamicResource Hyperlink}" 
                     x:Name="TelegramHyperlink" 
