--- a/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/AboutAppPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/AboutAppPage.xaml
@@ -20,7 +20,7 @@
                     Margin="0 0 3.5 0"/>
                 <TextBlock
                     Style="{DynamicResource OtherStyleTextBlock}"
-                    Text="GoodProgrammer©"
+                    Text="PegasusCode©"
                     Margin="3.5 0 0 0"/>
             </StackPanel>
             <StackPanel
