--- a/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/UpdateApplicationPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/SettingsBodyFolder/UpdateApplicationPage.xaml
@@ -65,7 +65,7 @@
                                 Margin="0 0 3.5 0"/>
                             <TextBlock
                                 Style="{DynamicResource OtherStyleTextBlock}"
-                                Text="4.12.202"
+                                Text="4.12.286"
                                 Margin="3.5 0 0 0"/>
                         </StackPanel>
                         <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
@@ -369,7 +369,8 @@
                     Visibility="Visible"
                     Style="{DynamicResource BorderInformation}">
                     <Grid>
-                        <Border Style="{DynamicResource NeonBorder}">
+                        <Border 
+                            Style="{DynamicResource NeonBorder}">
                             <Border.BorderBrush>
                                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                     <GradientStop Color="#00b59c"/>
@@ -378,7 +379,7 @@
                             </Border.BorderBrush>
                             <Border.Effect>
                                 <DropShadowEffect 
-                                    Color="{StaticResource NeonHighlightingColor}"
+                                    Color="#00b59c"
                                     ShadowDepth="0"
                                     Direction="0"
                                     BlurRadius="25"/>
@@ -429,7 +430,7 @@
                                 Style="{DynamicResource HorizontalDataStackPanel}">
                                 <TextBlock
                                     Style="{DynamicResource MainStyleTextBlock}"
-                                    Text="Когда проверялось:"
+                                    Text="Кем проверялось:"
                                     Margin="0 0 3.5 0"/>
                                 <TextBlock
                                     Style="{DynamicResource OtherStyleTextBlock}"
@@ -439,14 +440,14 @@
                             <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
                                 <TextBlock
                                     Style="{DynamicResource MainStyleTextBlock}"
-                                    Text="Кем проверялось:"
+                                    Text="Когда проверялось:"
                                     Margin="0 0 3.5 0"/>
                                 <TextBlock
                                     Style="{DynamicResource OtherStyleTextBlock}"
                                     x:Name="WhomCheckedTextBlock"
                                     Margin="3.5 0 0 0"/>
                             </StackPanel>
-                            <StackPanel Margin="0 3.5 0 0" Style="{DynamicResource HorizontalDataStackPanel}">
+                            <StackPanel Style="{DynamicResource HorizontalDataStackPanel}">
                                 <TextBlock
                                     Style="{DynamicResource MainStyleTextBlock}"
                                     Text="Результат:"
@@ -454,6 +455,16 @@
                                 <TextBlock
                                     Style="{DynamicResource OtherStyleTextBlock}"
                                     x:Name="ResultCheckedTextBlock"
+                                    Margin="3.5 0 0 0"/>
+                            </StackPanel>
+                            <StackPanel Margin="0 3.5 0 0" Style="{DynamicResource HorizontalDataStackPanel}">
+                                <TextBlock
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    Text="Версия:"
+                                    Margin="0 0 3.5 0"/>
+                                <TextBlock
+                                    x:Name="VersionCheckedTextBlock"
+                                    Style="{DynamicResource OtherStyleTextBlock}"
                                     Margin="3.5 0 0 0"/>
                             </StackPanel>
                         </StackPanel>
