--- a/DesctopHITE/PerformanceFolder/PageFolder/UserPageFolder/MainPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/UserPageFolder/MainPage.xaml
@@ -10,22 +10,11 @@
     Style="{DynamicResource MainUserPageStyle}">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="120"/>
             <RowDefinition Height="2*"/>
-            <RowDefinition Height="1.2*"/>
+            <RowDefinition Height="1.8*"/>
         </Grid.RowDefinitions>
-        <TextBlock
-            Grid.Row="0"
-            Text="Loading..."
-            Padding="10 5"
-            FontSize="25"
-            Background="#462AD8"
-            TextAlignment="Center"
-            VerticalAlignment="Bottom"
-            x:Name="HelloyTextBlock"
-            Style="{DynamicResource MainStyleTextBlock}"/>
         <StackPanel 
-            Grid.Row="1" 
+            Grid.Row="0" 
             VerticalAlignment="Center"
             HorizontalAlignment="Center" 
             Orientation="Vertical">
@@ -49,10 +38,27 @@
                 Foreground="#462AD8"/>
         </StackPanel>
         <StackPanel
-            Grid.Row="2" 
+            Grid.Row="1" 
             Orientation="Vertical" 
             VerticalAlignment="Center" 
             HorizontalAlignment="Center">
+            <TextBlock
+                Margin="0 0 0 20"
+                Grid.Row="0"
+                FontSize="25"
+                TextAlignment="Center"
+                VerticalAlignment="Bottom"
+                Style="{DynamicResource MainStyleTextBlock}">
+                <Border 
+                    Background="#462AD8"
+                    BorderThickness="0"
+                    CornerRadius="5">
+                    <TextBlock 
+                        Margin="10"
+                        Text="Loading..."
+                        x:Name="HelloyTextBlock"/>
+                </Border>
+            </TextBlock>
             <TextBlock
                 Width="350"
                 HorizontalAlignment="Center"
@@ -60,11 +66,11 @@
                 x:Name="NowTimeTextBlock"
                 Style="{DynamicResource MainStyleTextBlock}"
                 FontSize="60"
-                Text="00:00:00"
+                Text="Loading..."
                 FontFamily="\ContentFolder\FontFolder\#DM Mono Medium"
                 Margin="0 0 0 2.5"/>
             <TextBlock
-                Text="...."
+                Text="Loading..."
                 Margin="0 2.5 0 0"
                 HorizontalAlignment="Center"
                 TextAlignment="Center"
@@ -72,7 +78,7 @@
                 Style="{DynamicResource MainStyleTextBlock}"
                 FontSize="20"/>
             <TextBlock
-                Text="00 ..... (00) 0000"
+                Text="Loading..."
                 Margin="0 2.5 0 2.5"
                 HorizontalAlignment="Center"
                 TextAlignment="Center"
@@ -87,7 +93,7 @@
                 Style="{DynamicResource MainStyleTextBlock}"
                 FontSize="25"/>
             <TextBlock
-                Text="....."
+                Text="Loading..."
                 Margin="0 2.5 0 0"
                 HorizontalAlignment="Center"
                 TextAlignment="Center"
