--- a/DesctopHITE/AppDateFolder/StyleFolder/PageDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/PageDictionary.xaml
@@ -29,5 +29,11 @@
         <Setter Property="Height" Value="790"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
     </Style>
-    
+    <Style x:Key="BodyCashPageStyle" TargetType="Page">
+        <!--Тело в пространстве взаимодействия-->
+        <Setter Property="Width" Value="1416"/>
+        <Setter Property="Height" Value="976"/>
+        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+    </Style>
+
 </ResourceDictionary>
