--- a/DesctopHITE/AppDateFolder/StyleFolder/PageDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/PageDictionary.xaml
@@ -11,7 +11,7 @@
     </Style>
     <Style x:Key="MenuCashPageStyle" TargetType="Page"><!--Меню слева у кассы-->
         <Setter Property="Width" Value="500"/>
-        <Setter Property="Height" Value="1078"/>
+        <Setter Property="Height" Value="976"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
     </Style>
     <Style x:Key="MainUserPageStyle" TargetType="Page"> <!--Пространство взаимодействия-->
@@ -29,8 +29,7 @@
         <Setter Property="Height" Value="790"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
     </Style>
-    <Style x:Key="BodyCashPageStyle" TargetType="Page">
-        <!--Тело в пространстве взаимодействия-->
+    <Style x:Key="BodyCashPageStyle" TargetType="Page"> <!--Тело в пространстве взаимодействия кассы-->
         <Setter Property="Width" Value="1416"/>
         <Setter Property="Height" Value="976"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
