--- a/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/ListMenuCashPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/ListMenuCashPage.xaml
@@ -14,7 +14,7 @@
             Background="Transparent"
             x:Name="ListMenuListView"
             Margin="0"
-            ItemContainerStyle="{StaticResource ListViewItemSelectedMunuList}">
+            ItemContainerStyle="{StaticResource ListMenuCashItemSelected}">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel 
@@ -26,7 +26,7 @@
             </ListView.ItemsPanel>
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <UserControl:MenuControl/>
+                    <UserControl:MenuCashControl/>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
