--- a/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/AuthorizationWindow.xaml
@@ -62,7 +62,7 @@
                         VerticalAlignment="Center"
                         HorizontalAlignment="Center">
                         <TextBlock
-                            Text="HTRE"
+                            Text="HIRE"
                             Margin="0 0 0 0"
                             FontSize="100"
                             Style="{StaticResource MainStyleTextBlock}"
