--- a/DesctopHITE/PerformanceFolder/WindowsFolder/MainCashWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/MainCashWindow.xaml
@@ -12,22 +12,26 @@
         CornerRadius="0" 
         Style="{DynamicResource MainBorderStyle}">
         <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="500"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Grid Grid.Column="1">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="1*"/>
-                    <RowDefinition Height="100"/>
-                </Grid.RowDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="100"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="500"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
                 <Frame
-                    Grid.Row="0"
+                    x:Name="MenuCashFrame"
+                    Grid.Column="0"/>
+                <Frame
+                    Grid.Column="1"
                     x:Name="BodyCashFrame"/>
             </Grid>
-            <Frame
-                x:Name="MenuCashFrame"
-                Grid.Column="0"/>
+            <Border
+                CornerRadius="20 20 0 0"
+                Background="#2a2a2a"
+                Grid.Row="1"/>  
         </Grid>
     </Border>
 </Window>
