--- a/DesctopHITE/PerformanceFolder/WindowsFolder/MainCashWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/MainCashWindow.xaml
@@ -28,10 +28,61 @@
                     Grid.Column="1"
                     x:Name="BodyCashFrame"/>
             </Grid>
-            <Border
-                CornerRadius="20 20 0 0"
-                Background="#2a2a2a"
-                Grid.Row="1"/>  
+            <Grid Grid.Row="1">
+                <Border
+                    CornerRadius="20 20 0 0"
+                    Background="#2a2a2a"/>
+                <Button 
+                    FontSize="40"
+                    HorizontalAlignment="Right"
+                    Margin="0 0 10 0"
+                    Height="80"
+                    Style="{DynamicResource OtherButtonStyle}">
+                    <StackPanel Margin="50 0" Orientation="Horizontal">
+                        <TextBlock
+                            FontSize="40"
+                            Text="&#xf1c9;" 
+                            Style="{DynamicResource IconTextBlockStyle}"
+                            Margin="0 0 10 0"/>
+                        <TextBlock
+                            Margin="10 0 0 0"
+                            Text="КОРЗИНА"/>
+                    </StackPanel>
+                </Button>
+                <Button 
+                    FontSize="40"
+                    HorizontalAlignment="Center"
+                    Margin="0 0 0 0"
+                    Height="80">
+                    <StackPanel Margin="50 0" Orientation="Horizontal">
+                        <TextBlock
+                            FontSize="40"
+                            Text="&#xf111;" 
+                            Style="{DynamicResource IconTextBlockStyle}"
+                            Margin="0 0 10 0"/>
+                        <TextBlock
+                            Margin="10 0 0 0"
+                            Text="ОПЛАТИТЬ"/>
+                    </StackPanel>
+                </Button>
+                <Button 
+                    FontSize="40"
+                    HorizontalAlignment="Left"
+                    Margin="10 0 0 0"
+                    Style="{DynamicResource DeliteButtonStyle}"
+                    Height="80">
+                    <StackPanel Margin="50 0" Orientation="Horizontal">
+                        <TextBlock
+                            FontSize="40"
+                            Text="&#xf136;" 
+                            Style="{DynamicResource IconTextBlockStyle}"
+                            Margin="0 0 10 0"/>
+                        <TextBlock
+                            Margin="10 0 0 0"
+                            Text="ОТМЕНИТЬ"/>
+                    </StackPanel>
+                </Button>
+            </Grid>
         </Grid>
     </Border>
 </Window>
