--- a/DesctopHITE/AppDateFolder/StyleFolder/TextBoxDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/TextBoxDictionary.xaml
@@ -60,4 +60,26 @@
         <Setter Property="Padding" Value="10"/>
         <Setter Property="TextWrapping" Value="Wrap"/>
     </Style>
+
+    <Style x:Key="IncreaseDecreaseStyleTextBox" TargetType="TextBox" BasedOn="{StaticResource MainTextBoxStyle}">
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Border 
+                        x:Name="border"
+                        CornerRadius="0"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        Background="{TemplateBinding Background}"
+                        BorderThickness="{TemplateBinding BorderThickness}">
+                        <ScrollViewer 
+                            x:Name="PART_ContentHost"
+                            Focusable="false"
+                            HorizontalScrollBarVisibility="Hidden"
+                            VerticalScrollBarVisibility="Hidden"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
