--- a/DesctopHITE/PerformanceFolder/WindowsFolder/InfoMenuCashWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/InfoMenuCashWindow.xaml
@@ -5,8 +5,76 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
+    WindowStartupLocation="CenterScreen"
     Style="{StaticResource InfoMenuCashWindowStyle}">
-    <Grid>
-        
-    </Grid>
+    <Border Style="{DynamicResource MainBorderStyle}">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid 
+                x:Name="SpaseBarGrid"
+                Background="Transparent">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="430"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Polygon
+                    HorizontalAlignment="Center"
+                    Grid.Column="1"
+                    Points="0,0, 30,15, 400,15, 430,0" 
+                    x:Name="PoligonName"
+                    Fill="#2a2a2a"
+                    Opacity="1">
+                    <Polygon.Effect>
+                        <DropShadowEffect 
+                            Direction="-90"
+                            Color="{DynamicResource ShadowColor}"
+                            BlurRadius="5"
+                            ShadowDepth="0.5"
+                            Opacity="0.5"
+                            RenderingBias="Performance"/>
+                    </Polygon.Effect>
+                </Polygon>
+            </Grid>
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="400"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Grid.Column="0" Margin="0 10 10 0" HorizontalAlignment="Right" VerticalAlignment="Top">
+                    <Image
+                        Margin="0 0 0 5"
+                        Height="350"
+                        Width="350"
+                        Source="{Binding ImageMenuTable.Image_ImageMenu}"/>
+                    <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="0 5 0 0">
+                        <Button
+                            x:Name="DecreaseButton"
+                            Click="DecreaseButton_Click"
+                            Style="{DynamicResource DecreaseStyleButton}"
+                            Content="-"
+                            Height="40"
+                            Width="40"/>
+                        <TextBox
+                            TextChanged="IncreaseDecreaseTextBox_TextChanged"
+                            x:Name="IncreaseDecreaseTextBox"
+                            IsEnabled="False"
+                            Style="{DynamicResource IncreaseDecreaseStyleTextBox}"
+                            Height="40"
+                            Width="140"/>
+                        <Button
+                            x:Name="IncreaseButton"
+                            Click="IncreaseButton_Click"
+                            Style="{DynamicResource IncreaseStyleButton}"
+                            Content="+"
+                            Height="40"
+                            Width="40"/>
+                    </StackPanel>
+                </StackPanel>
+            </Grid>
+        </Grid>
+    </Border>
 </Window>
