--- a/DesctopHITE/AppDateFolder/StyleFolder/TextBoxDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/TextBoxDictionary.xaml
@@ -62,7 +62,11 @@
     </Style>
 
     <Style x:Key="IncreaseDecreaseStyleTextBox" TargetType="TextBox" BasedOn="{StaticResource MainTextBoxStyle}">
+        <Setter Property="Height" Value="80"/>
+        <Setter Property="Width" Value="160"/>
+        <Setter Property="FontSize" Value="30"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="IsEnabled" Value="False"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
