--- a/DesctopHITE/AppDateFolder/StyleFolder/WindowsDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/WindowsDictionary.xaml
@@ -38,5 +38,10 @@
         <Setter Property="Height" Value="900"/>
         <Setter Property="Width" Value="1600"/>
     </Style>
-    
+
+    <Style x:Key="WaitingTimerWindowStyle" TargetType="Window" BasedOn="{StaticResource MainWinwosStyle}">
+        <Setter Property="Height" Value="720"/>
+        <Setter Property="Width" Value="1280"/>
+    </Style>
+
 </ResourceDictionary>
