--- a/DesctopHITE/PerformanceFolder/WindowsFolder/InfoMenuCashWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/InfoMenuCashWindow.xaml
@@ -14,9 +14,7 @@
                 <RowDefinition Height="30"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Grid 
-                x:Name="SpaseBarGrid"
-                Background="Transparent">
+            <Grid Background="Transparent">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="1400"/>
