--- a/DesctopHITE/PerformanceFolder/PageFolder/PanelMenuFolder/MenuCashPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/PanelMenuFolder/MenuCashPage.xaml
@@ -15,7 +15,9 @@
             ItemContainerStyle="{StaticResource MenuCashItemSelected}">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding Title_MenuCategory}"/>
+                    <TextBlock 
+                        Name="MenuCategoryTextBlock"
+                        Text="{Binding Title_MenuCategory}"/>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
